--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -25,8 +25,8 @@
   "loveDesc": "This is exactly what I need",
   "like": "Like it",
   "likeDesc": "It's interesting",
-  "meh": "Meh",
-  "mehDesc": "It's not great",
+  "neutral": "Meh",
+  "neutralDesc": "It's not great",
   "dislike": "Don't like it",
   "dislikeDesc": "It's not for me"
     },
