--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -104,7 +104,7 @@
       "pricing": "Piani tariffari"
     },
     "signup": "Registrati",
-    "signup_url": "https://tally.so/r/31Gv8Q"
+    "signup_url": "https://tally.so/r/wL69bj"
   },
   "services": {
     "tax_declaration": "Dichiarazione fiscale",
